# poke-transformer-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3233068d2641_drop_redundant_id_index.py  4ee000f50b34_create_pokemon_records_table.py  76f5de356b55_add_pokemon_stats_field.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  pokemon.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: pokemon_record.py
app/schemas/: pokemon.py
app/services/: pokemon_transformer.py
tests/: conftest.py  test_pokemon_endpoint.py  test_pokemon_metrics.py
