[project]
name = "poke-transformer-api"
version = "0.1.0"
description = "FastAPI service that transforms PokeAPI data and stores it in a database"
authors = [
    {name = "Christopher Bitti",email = "christopherbitti9@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
