[project]
name = "poke-transformer-api"
version = "0.1.0"
description = "FastAPI service that transforms PokeAPI data and stores it in a database"
authors = [
    {name = "Christopher Bitti",email = "christopherbitti9@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.2.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "psycopg[binary] (>=3.3.0,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
src = ["app", "tests"]

[tool.mypy]
plugins = []
strict = false
ignore_missing_imports = true
